--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 }
 
 .chatbot-popup {
+  position: relative;
   width: 420px;
   background: #fff;
   overflow: hidden;
@@ -97,14 +98,146 @@ body {
   align-self: flex-end;
   margin-bottom: 2px;
   flex-shrink: 0;
+  border-radius: 50%;
+}
+
+.chat-body .user-message{
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.chat-body .bot .message-text{
+  background: #f2f2ff;
 }
 
 .chat-body .message .message-text{
     padding: 12px 16px;
     max-width: 75%;
-    background: #f2f2ff;
+    font-size: 0.95rem;
+}
+
+.chat-body .bot-message.thinking .message-text{
+padding: 2px 16px;
+}
+
+.chat-body .bot-message .message-text{
+  background: #f2f2ff;
+  border-radius: 13px 13px 13px 3px ;
+}
+
+.chat-body .user-message .message-text{
+  color: #fff;
+  background: #5350c4;
+  border-radius: 13px 13px 3px 13px ;
+}
+
+.chat-body .bot-message .thinking-indicator{
+  display: flex;
+  gap: 4px;
+  padding-block: 15px;
+}
+
+.chat-body .bot-message .thinking-indicator .dot{
+  height: 7px;
+  width: 7px;
+  border-radius: 50%;
+  opacity: 0.7;
+  background: #6f6bc2;
+  /* animation: dotPulse 1.8s ease-in-out infinite; */
+}
+
+.chat-body .bot-message .thinking-indicator .dot:nth-child(1){
+  animation-delay: 0.2s;
+}
+
+.chat-body .bot-message .thinking-indicator .dot:nth-child(2){
+  animation-delay: 0.3s;
+}
+
+.chat-body .bot-message .thinking-indicator .dot:nth-child(3){
+  animation-delay: 0.4s;
+}
+
+@keyframes dotPulse {
+  0%, 44%{
+    transform: translateY(0);
+  }
+
+  28%{
+    transform: translateY(-4px);
+  }
+
+  44%{
+    opacity: 0.2;
+  }
 }
 
 .chat-footer {
   position: absolute;
+  bottom: 0;
+  width: 100%;
+  background: #fff;
+  padding: 15px 22px 20px;
+}
+
+.chat-footer .chat-form{
+  display: flex;
+  align-items: center;
+  background: #fffff7;
+  border-radius: 32px;
+  outline: 1px solid #cccce5;
+}
+
+.chat-footer .chat-form:focus-within{
+outline: 2px solid #5350c4;
+}
+
+.chat-form .message-input{
+  border: none;
+  outline: none;
+  height: 47px;
+  width: 100%;
+  font-size: 0.95rem;
+  resize: none;
+  padding: 14px 0 13px 18px;
+  border-radius: inherit;
+}
+
+.chat-form .chat-controls{
+  display: flex;
+  align-items: center;
+  align-self: flex-end;
+  padding-right: 6px;
+  height: 47px;
+  gap: 3px;
+}
+
+.chat-form .chat-controls button{
+  height: 35px;
+  width: 35px;
+  border: none;
+  cursor: pointer;
+  color: #706db0;
+  background: none;
+  font-size: 1.15rem;
+  border-radius: 50%;
+  transition: 0.2s ease;
+}
+
+.chat-form .chat-controls #send-message{
+  color:#fff;
+  background: #5350c4;
+  display: none;
+}
+
+.chat-form .message-input:valid~.chat-controls #send-message{
+  display: block;
+}
+
+.chat-form .chat-controls #send-message:hover{
+  background: #3d39ac;
+}
+
+.chat-form .chat-controls button:hover{
+  background: #f1f1ff;
 }
